re name file and add comments

--- a/Habyt_test_ETL.ipynb
+++ b/Habyt_test_ETL.ipynb
@@ -53,7 +53,7 @@
     "    else:\n",
     "        print(\"Failed to retrieve data. Status code:\", response.status_code)\n",
     "except requests.exceptions.RequestException as e:\n",
-    "    print(\"Error:\", e)\n"
+    "    print(\"Error:\", e)"
    ]
   },
   {
@@ -83,8 +83,8 @@
     "# Address class definition\n",
     "class Address:\n",
     "    def __init__(self, data):\n",
-    "        self.id = f\"{data['id']}-{data['propertyId']}\" \n",
-    "        address_data = data['address']\n",
+    "        self.id = f\"{data['id']}-{data['propertyId']}\"  ## Concatination of id and propertyID to create a unique addressID.\n",
+    "        address_data = data['address'] \n",
     "        self.fullAddress = address_data['fullAddress']\n",
     "        self.roomNumber = address_data['roomNumber']\n",
     "        self.streetAddress = address_data['streetAddress']\n",
@@ -101,7 +101,7 @@
     "    def __init__(self, data):\n",
     "        self.id = data['id']\n",
     "        self.propertyId = data['propertyId']\n",
-    "        self.addressId = f\"{data['id']}-{data['propertyId']}\"\n",
+    "        self.addressId = f\"{data['id']}-{data['propertyId']}\" ## Concatination of id and propertyID to create a unique addressID.\n",
     "        self.bedrooms = data['bedrooms']\n",
     "        self.listingSqft = data['listingSqft']\n",
     "        self.unitSqft = data['unitSqft']\n",
@@ -111,20 +111,20 @@
     "# Pricing class definition\n",
     "class Pricing:\n",
     "    def __init__(self, data):\n",
-    "        self.id = f\"{data['id']}-{data['months']}\" \n",
+    "        self.id = f\"{data['id']}-{data['months']}\"  ## Concatination of id and months to create a unique PricingID.\n",
     "        self.unitId = data['id']\n",
     "        self.name = data['name']\n",
     "        self.durationMonths = data['months']\n",
     "        self.amount = data['amount']\n",
-    "        self.concessionsApplied = ', '.join(data['concessionsApplied'])\n",
-    "        self.minimumPrice = data['pricing']['minimumPrice']\n",
-    "        self.maximumPrice = data['pricing']['maximumPrice']\n",
-    "        self.minimumStay = data['pricing']['minimumStay']\n",
+    "        self.concessionsApplied = ', '.join(data['concessionsApplied']) ## get the list of concessionsApplied in the form of text as there can be multiple concessions.\n",
+    "        self.minimumPrice = data['pricing']['minimumPrice']  ## minimumPrice for each unit\n",
+    "        self.maximumPrice = data['pricing']['maximumPrice']  ## maximumPrice for each unit\n",
+    "        self.minimumStay = data['pricing']['minimumStay']    ## minimumStay for each unit\n",
     "\n",
     "# Fee class definition\n",
     "class Fee:\n",
     "    def __init__(self, data):\n",
-    "        self.id = f\"{data['id']}-{data['name']}\"\n",
+    "        self.id = f\"{data['id']}-{data['name']}\" ## Concatination of id and name to create a unique FeeID.\n",
     "        self.unitId = data['id']\n",
     "        self.name = data['name']\n",
     "        self.description = data['description']\n",
@@ -156,7 +156,7 @@
     "## Properties, Addresses, and Units: Each item in the JSON data corresponds directly to an object of these types.\n",
     "properties = [Property(item) for item in data]\n",
     "addresses = [Address(item) for item in data]\n",
-    "units = [Unit(item) for item in data]\n"
+    "units = [Unit(item) for item in data]"
    ]
   },
   {
@@ -169,8 +169,8 @@
     "## Therefore, we iterate over these entries separately to create objects for each of them.\n",
     "pricings = []\n",
     "for item in data:\n",
-    "    for price in item['pricing']['monthlyPricing']:\n",
-    "        pricings.append(Pricing({**item, **price}))\n",
+    "    for each_item in item['pricing']['monthlyPricing']:\n",
+    "        pricings.append(Pricing({**item, **each_item}))\n",
     "\n",
     "fees = []\n",
     "for item in data:\n",
@@ -197,7 +197,7 @@
    "outputs": [],
    "source": [
     "# Function to Create CSV files from objects\n",
-    "# Also make sure to drop duplicate rows\n",
+    "# Also make sure to drop duplicate rows (eg. Propertties file was getting duplicated rows)\n",
     "\n",
     "def generate_csv(objects, filename):\n",
     "    unique_rows = set()\n",
@@ -208,8 +208,7 @@
     "              obj_row = tuple(obj.__dict__.values())\n",
     "              if obj_row not in unique_rows:\n",
     "                  writer.writerow(obj.__dict__)\n",
-    "                  unique_rows.add(obj_row)\n",
-    "\n"
+    "                  unique_rows.add(obj_row)"
    ]
   },
   {
